--- a/locale/es.po
+++ b/locale/es.po
@@ -12,8 +12,17 @@ msgctxt "model:ir.message,text:msg_error_send_pimec_error"
 msgid ""
 "Error send Pimec factura-e error %(invoice)s:\n"
 "%(error)s"
-msgstr "Error enviando Pimec factura-e error %(invoice)s:\n"
+msgstr ""
+"Error envío factura-e Pimec error %(invoice)s:\n"
 "%(error)s"
+
+msgctxt "model:ir.message,text:msg_error_send_pimec_future"
+msgid ""
+"Forbiden action: Invoice date of invoice %(id)s is set in the future,"
+" and it would be sent automatically."
+msgstr ""
+"Acción prohibida: la fecha de la factura %(id)s está establecida en "
+"el futuro y se enviaría automáticamente."
 
 msgctxt "model:ir.message,text:msg_error_send_pimec_status"
 msgid "Error send Pimec factura-e status code: %(status_code)s %(text)s"
@@ -21,8 +30,10 @@ msgstr ""
 "Error enviando Pimec factura-e con código (status): %(status_code)s %(text)s"
 
 msgctxt "model:ir.message,text:msg_error_send_pimec_timeout"
-msgid "Error send Pimec factura-e timeout %(invoice)s:%(error)s"
-msgstr "Error enviando Pimec factura-e timeout %(invoice)s:%(error)s"
+msgid ""
+"Error send Pimec factura-e timeout %(invoice)s:\n"
+"%(error)s"
+msgstr "Error envío Pimec factura-e timeout %(factura)s: %(error)s"
 
 msgctxt "selection:account.configuration.facturae,facturae_service:"
 msgid "Pimec"
