--- a/locale/es.po
+++ b/locale/es.po
@@ -33,7 +33,7 @@ msgctxt "model:ir.message,text:msg_error_send_pimec_timeout"
 msgid ""
 "Error send Pimec factura-e timeout %(invoice)s:\n"
 "%(error)s"
-msgstr "Error envío Pimec factura-e timeout %(factura)s: %(error)s"
+msgstr "Error envío Pimec factura-e timeout %(invoice)s: %(error)s"
 
 msgctxt "selection:account.configuration.facturae,facturae_service:"
 msgid "Pimec"
